## Process this file with automake to produce Makefile.in ##

INCLUDES = -I../include

lib_LTLIBRARIES = libglpk.la

libglpk_la_LDFLAGS = -version-info 21:0:21 \
-export-symbols-regex '^(glp_|_glp_lpx_).*'

libglpk_la_SOURCES = \
glpapi01.c \
glpapi02.c \
glpapi03.c \
glpapi04.c \
glpapi05.c \
glpapi06.c \
glpapi07.c \
glpapi08.c \
glpapi09.c \
glpapi10.c \
glpapi11.c \
glpapi12.c \
glpapi13.c \
glpapi14.c \
glpapi15.c \
glpapi16.c \
glpapi17.c \
glpapi18.c \
glpapi19.c \
glpapi20.c \
glpavl.c \
glpbfd.c \
glpbfx.c \
glpcpx.c \
glpdmp.c \
glpdmx.c \
glpfhv.c \
glpgmp.c \
glphbm.c \
glpini01.c \
glpini02.c \
glpios01.c \
glpios02.c \
glpios03.c \
glpios04.c \
glpios05.c \
glpios06.c \
glpios07.c \
glpios08.c \
glpios09.c \
glpipm.c \
glpipp01.c \
glpipp02.c \
glplib01.c \
glplib02.c \
glplib03.c \
glplib04.c \
glplib05.c \
glplib06.c \
glplib07.c \
glplib08.c \
glplib09.c \
glplib10.c \
glplib11.c \
glplib12.c \
glplpf.c \
glplpp01.c \
glplpp02.c \
glplpx01.c \
glplpx02.c \
glplpx03.c \
glplpx04.c \
glplpx05.c \
glplpx06.c \
glplpx07.c \
glplpx08.c \
glplpx09.c \
glpluf.c \
glplux.c \
glpmat.c \
glpmpl01.c \
glpmpl02.c \
glpmpl03.c \
glpmpl04.c \
glpmpl05.c \
glpmpl06.c \
glpmps01.c \
glpmps02.c \
glpnet01.c \
glpnet02.c \
glpnet03.c \
glpnet04.c \
glpnet05.c \
glpnet06.c \
glpnet07.c \
glppds.c \
glpqmd.c \
glprgr.c \
glprng01.c \
glprng02.c \
glpscf.c \
glpscg.c \
glpscl.c \
glpspm.c \
glpspx01.c \
glpspx02.c \
glpsql.c \
glpssx01.c \
glpssx02.c \
glptsp.c

## eof ##
